# GPT-Bargaining

./: pyproject.toml
lib_prompt/: seller.txt
